# prime-generator

./: Cargo.toml
src/: lib.rs  main.rs
