[package]
name = "prime-generator"
version = "0.1.0"
authors = ["tarberd <bernardo.mferrari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.6"

[dependencies.num-bigint]
version = "0.2"
features = ["rand"]
